--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "zf-commons/zfc-base",
+    "name": "mahendra12345/zfc-base",
     "description": "A set of genetic (abstract) classes which are commonly used across multiple modules.",
     "type": "library",
     "keywords": [
