--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,7 @@
         "laminas/laminas-eventmanager": "^3.4",
         "laminas/laminas-loader": "~2.1",
         "laminas/laminas-modulemanager": "^2.15",
-        "laminas/laminas-mvc": "^3.7",
+         "laminas/laminas-mvc": "^3.3 || 4.0.x-dev",
         "laminas/laminas-servicemanager": "^3.21.0",
         "laminas/laminas-stdlib": "^3.10.1",
         "laminas/laminas-dependency-plugin": "^2.1"
